source/debris/testz/parsetest02.output
Terminals unused in grammar

    NTH
    IFX


State 38 conflicts: 1 shift/reduce, 1 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: %empty
    2        | program block EOL

    3 assignment: VAR ASSIGN chain
    4           | VAR ASSIGN assignment

    5 item: NUMBER
    6     | OPEN block CLOSED
    7     | VAR

    8 rvalue: item

    9 product: rvalue
   10        | product TIMES rvalue

   11 sum: product
   12    | sum PLUS product

   13 simpleexpr: sum

   14 chain: simpleexpr
   15      | chain simpleexpr

   16 ifthen: IF block THEN nullifiable

   17 ifthenelse: IF block THEN block ELSE nullifiable

   18 conditional: ifthen
   19            | ifthenelse

   20 nullifiable: chain
   21            | assignment
   22            | conditional

   23 nullified: nullifiable NULLIFY

   24 sequence: nullified
   25         | sequence nullified

   26 block: sequence
   27      | nullifiable
   28      | sequence nullifiable


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NUMBER <i> (258) 5
    VAR <i> (259) 3 4 7
    OPEN (260) 6
    CLOSED (261) 6
    NTH (262)
    TIMES (263) 10
    PLUS (264) 12
    NULLIFY (265) 23
    EOL (266) 2
    ASSIGN (267) 3 4
    IF (268) 16 17
    THEN (269) 16 17
    IFX (270)
    ELSE (271) 17


Nonterminals, with rules where they appear

    $accept (17)
        on left: 0
    program <a> (18)
        on left: 1 2
        on right: 0 2
    assignment <a> (19)
        on left: 3 4
        on right: 4 21
    item <a> (20)
        on left: 5 6 7
        on right: 8
    rvalue <a> (21)
        on left: 8
        on right: 9 10
    product <a> (22)
        on left: 9 10
        on right: 10 11 12
    sum <a> (23)
        on left: 11 12
        on right: 12 13
    simpleexpr <a> (24)
        on left: 13
        on right: 14 15
    chain <a> (25)
        on left: 14 15
        on right: 3 15 20
    ifthen <a> (26)
        on left: 16
        on right: 18
    ifthenelse <a> (27)
        on left: 17
        on right: 19
    conditional <a> (28)
        on left: 18 19
        on right: 22
    nullifiable <a> (29)
        on left: 20 21 22
        on right: 16 17 23 27 28
    nullified <a> (30)
        on left: 23
        on right: 24 25
    sequence <a> (31)
        on left: 24 25
        on right: 25 26 28
    block <a> (32)
        on left: 26 27 28
        on right: 2 6 16 17


State 0

    0 $accept: • program $end

    $default  reduce using rule 1 (program)

    program  go to state 1


State 1

    0 $accept: program • $end
    2 program: program • block EOL

    $end    shift, and go to state 2
    NUMBER  shift, and go to state 3
    VAR     shift, and go to state 4
    OPEN    shift, and go to state 5
    IF      shift, and go to state 6

    assignment   go to state 7
    item         go to state 8
    rvalue       go to state 9
    product      go to state 10
    sum          go to state 11
    simpleexpr   go to state 12
    chain        go to state 13
    ifthen       go to state 14
    ifthenelse   go to state 15
    conditional  go to state 16
    nullifiable  go to state 17
    nullified    go to state 18
    sequence     go to state 19
    block        go to state 20


State 2

    0 $accept: program $end •

    $default  accept


State 3

    5 item: NUMBER •

    $default  reduce using rule 5 (item)


State 4

    3 assignment: VAR • ASSIGN chain
    4           | VAR • ASSIGN assignment
    7 item: VAR •

    ASSIGN  shift, and go to state 21

    $default  reduce using rule 7 (item)


State 5

    6 item: OPEN • block CLOSED

    NUMBER  shift, and go to state 3
    VAR     shift, and go to state 4
    OPEN    shift, and go to state 5
    IF      shift, and go to state 6

    assignment   go to state 7
    item         go to state 8
    rvalue       go to state 9
    product      go to state 10
    sum          go to state 11
    simpleexpr   go to state 12
    chain        go to state 13
    ifthen       go to state 14
    ifthenelse   go to state 15
    conditional  go to state 16
    nullifiable  go to state 17
    nullified    go to state 18
    sequence     go to state 19
    block        go to state 22


State 6

   16 ifthen: IF • block THEN nullifiable
   17 ifthenelse: IF • block THEN block ELSE nullifiable

    NUMBER  shift, and go to state 3
    VAR     shift, and go to state 4
    OPEN    shift, and go to state 5
    IF      shift, and go to state 6

    assignment   go to state 7
    item         go to state 8
    rvalue       go to state 9
    product      go to state 10
    sum          go to state 11
    simpleexpr   go to state 12
    chain        go to state 13
    ifthen       go to state 14
    ifthenelse   go to state 15
    conditional  go to state 16
    nullifiable  go to state 17
    nullified    go to state 18
    sequence     go to state 19
    block        go to state 23


State 7

   21 nullifiable: assignment •

    $default  reduce using rule 21 (nullifiable)


State 8

    8 rvalue: item •

    $default  reduce using rule 8 (rvalue)


State 9

    9 product: rvalue •

    $default  reduce using rule 9 (product)


State 10

   10 product: product • TIMES rvalue
   11 sum: product •

    TIMES  shift, and go to state 24

    $default  reduce using rule 11 (sum)


State 11

   12 sum: sum • PLUS product
   13 simpleexpr: sum •

    PLUS  shift, and go to state 25

    $default  reduce using rule 13 (simpleexpr)


State 12

   14 chain: simpleexpr •

    $default  reduce using rule 14 (chain)


State 13

   15 chain: chain • simpleexpr
   20 nullifiable: chain •

    NUMBER  shift, and go to state 3
    VAR     shift, and go to state 26
    OPEN    shift, and go to state 5

    $default  reduce using rule 20 (nullifiable)

    item        go to state 8
    rvalue      go to state 9
    product     go to state 10
    sum         go to state 11
    simpleexpr  go to state 27


State 14

   18 conditional: ifthen •

    $default  reduce using rule 18 (conditional)


State 15

   19 conditional: ifthenelse •

    $default  reduce using rule 19 (conditional)


State 16

   22 nullifiable: conditional •

    $default  reduce using rule 22 (nullifiable)


State 17

   23 nullified: nullifiable • NULLIFY
   27 block: nullifiable •

    NULLIFY  shift, and go to state 28

    $default  reduce using rule 27 (block)


State 18

   24 sequence: nullified •

    $default  reduce using rule 24 (sequence)


State 19

   25 sequence: sequence • nullified
   26 block: sequence •
   28      | sequence • nullifiable

    NUMBER  shift, and go to state 3
    VAR     shift, and go to state 4
    OPEN    shift, and go to state 5
    IF      shift, and go to state 6

    $default  reduce using rule 26 (block)

    assignment   go to state 7
    item         go to state 8
    rvalue       go to state 9
    product      go to state 10
    sum          go to state 11
    simpleexpr   go to state 12
    chain        go to state 13
    ifthen       go to state 14
    ifthenelse   go to state 15
    conditional  go to state 16
    nullifiable  go to state 29
    nullified    go to state 30


State 20

    2 program: program block • EOL

    EOL  shift, and go to state 31


State 21

    3 assignment: VAR ASSIGN • chain
    4           | VAR ASSIGN • assignment

    NUMBER  shift, and go to state 3
    VAR     shift, and go to state 4
    OPEN    shift, and go to state 5

    assignment  go to state 32
    item        go to state 8
    rvalue      go to state 9
    product     go to state 10
    sum         go to state 11
    simpleexpr  go to state 12
    chain       go to state 33


State 22

    6 item: OPEN block • CLOSED

    CLOSED  shift, and go to state 34


State 23

   16 ifthen: IF block • THEN nullifiable
   17 ifthenelse: IF block • THEN block ELSE nullifiable

    THEN  shift, and go to state 35


State 24

   10 product: product TIMES • rvalue

    NUMBER  shift, and go to state 3
    VAR     shift, and go to state 26
    OPEN    shift, and go to state 5

    item    go to state 8
    rvalue  go to state 36


State 25

   12 sum: sum PLUS • product

    NUMBER  shift, and go to state 3
    VAR     shift, and go to state 26
    OPEN    shift, and go to state 5

    item     go to state 8
    rvalue   go to state 9
    product  go to state 37


State 26

    7 item: VAR •

    $default  reduce using rule 7 (item)


State 27

   15 chain: chain simpleexpr •

    $default  reduce using rule 15 (chain)


State 28

   23 nullified: nullifiable NULLIFY •

    $default  reduce using rule 23 (nullified)


State 29

   23 nullified: nullifiable • NULLIFY
   28 block: sequence nullifiable •

    NULLIFY  shift, and go to state 28

    $default  reduce using rule 28 (block)


State 30

   25 sequence: sequence nullified •

    $default  reduce using rule 25 (sequence)


State 31

    2 program: program block EOL •

    $default  reduce using rule 2 (program)


State 32

    4 assignment: VAR ASSIGN assignment •

    $default  reduce using rule 4 (assignment)


State 33

    3 assignment: VAR ASSIGN chain •
   15 chain: chain • simpleexpr

    NUMBER  shift, and go to state 3
    VAR     shift, and go to state 26
    OPEN    shift, and go to state 5

    $default  reduce using rule 3 (assignment)

    item        go to state 8
    rvalue      go to state 9
    product     go to state 10
    sum         go to state 11
    simpleexpr  go to state 27


State 34

    6 item: OPEN block CLOSED •

    $default  reduce using rule 6 (item)


State 35

   16 ifthen: IF block THEN • nullifiable
   17 ifthenelse: IF block THEN • block ELSE nullifiable

    NUMBER  shift, and go to state 3
    VAR     shift, and go to state 4
    OPEN    shift, and go to state 5
    IF      shift, and go to state 6

    assignment   go to state 7
    item         go to state 8
    rvalue       go to state 9
    product      go to state 10
    sum          go to state 11
    simpleexpr   go to state 12
    chain        go to state 13
    ifthen       go to state 14
    ifthenelse   go to state 15
    conditional  go to state 16
    nullifiable  go to state 38
    nullified    go to state 18
    sequence     go to state 19
    block        go to state 39


State 36

   10 product: product TIMES rvalue •

    $default  reduce using rule 10 (product)


State 37

   10 product: product • TIMES rvalue
   12 sum: sum PLUS product •

    TIMES  shift, and go to state 24

    $default  reduce using rule 12 (sum)


State 38

   16 ifthen: IF block THEN nullifiable •
   23 nullified: nullifiable • NULLIFY
   27 block: nullifiable •

    NULLIFY  shift, and go to state 28

    NULLIFY   [reduce using rule 16 (ifthen)]
    ELSE      reduce using rule 16 (ifthen)
    ELSE      [reduce using rule 27 (block)]
    $default  reduce using rule 16 (ifthen)

    shift/reduce conflict on token NULLIFY:
       16 ifthen: IF block THEN nullifiable •
       23 nullified: nullifiable • NULLIFY
      Example: IF block THEN IF block THEN nullifiable • NULLIFY ELSE nullifiable
      Shift derivation
        conditional
        ↳ ifthen
          ↳ IF block THEN nullifiable
                          ↳ conditional
                            ↳ ifthenelse
                              ↳ IF block THEN block                       ELSE nullifiable
                                              ↳ sequence
                                                ↳ nullified
                                                  ↳ nullifiable • NULLIFY
      Reduce derivation
        conditional
        ↳ ifthenelse
          ↳ IF block THEN block                                           ELSE nullifiable
                          ↳ sequence
                            ↳ nullified
                              ↳ nullifiable                       NULLIFY
                                ↳ conditional
                                  ↳ ifthen
                                    ↳ IF block THEN nullifiable •

    reduce/reduce conflict on token ELSE:
       16 ifthen: IF block THEN nullifiable •
       27 block: nullifiable •
      Example: IF block THEN IF block THEN nullifiable • ELSE nullifiable
      First reduce derivation
        conditional
        ↳ ifthenelse
          ↳ IF block THEN block                               ELSE nullifiable
                          ↳ nullifiable
                            ↳ conditional
                              ↳ ifthen
                                ↳ IF block THEN nullifiable •
      Second reduce derivation
        conditional
        ↳ ifthen
          ↳ IF block THEN nullifiable
                          ↳ conditional
                            ↳ ifthenelse
                              ↳ IF block THEN block           ELSE nullifiable
                                              ↳ nullifiable •



State 39

   17 ifthenelse: IF block THEN block • ELSE nullifiable

    ELSE  shift, and go to state 40


State 40

   17 ifthenelse: IF block THEN block ELSE • nullifiable

    NUMBER  shift, and go to state 3
    VAR     shift, and go to state 4
    OPEN    shift, and go to state 5
    IF      shift, and go to state 6

    assignment   go to state 7
    item         go to state 8
    rvalue       go to state 9
    product      go to state 10
    sum          go to state 11
    simpleexpr   go to state 12
    chain        go to state 13
    ifthen       go to state 14
    ifthenelse   go to state 15
    conditional  go to state 16
    nullifiable  go to state 41


State 41

   17 ifthenelse: IF block THEN block ELSE nullifiable •

    $default  reduce using rule 17 (ifthenelse)
